# multimodal-route-optimizer

./: .gitignore  Flight_Search.ipynb  airport_reliability.py  app.py  bus_and_flight_search.py  data_cache.py  deutschbahn_finder.py  filtered_airports_it_de.json  flight_and_ground_search.py  flight_plus_bus_search.py  flight_search.py  flixbus_de.db  flixbus_europe.db  flixbus_explore.ipynb  flixbus_finder.py  main.py  pyproject.toml  reverse_search.py  scrabbing.ipynb  skyscanner_url.py
UI/: Multi Route.html
UI/css/: main.css
UI/js/: app.jsx  constants.js  i18n.js  utils.js
UI/js/components/: AiSuggest.jsx  Badges.jsx  BusFlightBusCard.jsx  Cards.jsx  CityInput.jsx  DetailShells.jsx  Filter.jsx  Hub.jsx  InlineMap.jsx  JourneyDetail.jsx  (+2 more)
backend/: airport_reliability.py  bus_and_flight_search.py  bus_flight_bus_search.py  checkmybus.py  data_cache.py  flight_and_ground_search.py  flight_plus_bus_search.py  flight_search.py  flixbus_finder.py  main.py  reverse_search.py  train_finder.py
bus_train_prefetch/: analyze.py  prefetch.py
data/: bgy_debug.json  deutschland_stationen.db  flixbus_de.db  flixbus_europe.db  italya_istasyonlar.db  search_cache.db  search_cache.db-shm  search_cache.db-wal
deploy/: net.spacedevelopers.routeoptimizer.plist  setup_tunnel.sh  update.sh
jupyternotebook_files/: Flight_Search.ipynb  combining_bus_flight.ipynb  flight_bus.ipynb  flixbus_explore.ipynb  istasyon_yukleyici.ipynb  scrabbing.ipynb  skyscanner_url_test.ipynb  testing.ipynb  train_diagnostics.ipynb
tests/: test_bus_flight_bus_api.py  test_bus_flight_bus_search.py
